[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/RecordPlayerPuzzle/PuzzleThree/RecordPlayerPuzzleThree.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shared/MouseHotspot/MouseHotspot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/RecordPlayerPuzzle/PuzzleThree/puzzle_three_controller.gd" type="Script" id=3]

[node name="PuzzleThreeController" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="RecordPlayerPuzzleThree" parent="." instance=ExtResource( 1 )]

[node name="MouseHotspot" parent="." instance=ExtResource( 2 )]
margin_top = 650.0
margin_right = -2805.0
margin_bottom = -160.0
[connection signal="is_active" from="RecordPlayerPuzzleThree" to="." method="_on_RecordPlayerPuzzleTwo_is_active"]
[connection signal="is_pressed" from="MouseHotspot" to="." method="_on_MouseHotspot_is_pressed"]
